created a blog templated to render the view

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,12 @@
             <h2>logo</h2>
             <ul>
                 <lil>
-                    
+                    <a href="{% url 'home' %}">Home</a>
                 </lil>
+                <lil>
+                    <a href="{% url 'blog' %}">Blog</a>
+                </lil>
+
             </ul>
         </nav>
     </header>
