--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,4 +1,53 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="blog-container">
+    <div class="row">
+<!--Blog's entries column -->        
+        <div class="'col-12 mt-3 left">
+            <div class="row">
+                {% for post in post_list %}
+                <div class="col-md-4">
+                    <div class="card md-4">
+                        <div class="card-body">
+                            <div class="img-container">
+                                {% if "blog_image" in post.featured_images.url %}
+                                <img class ="card-img" src="#">
+                                {% else %}
+                                <img class="card-img" src="{{ post.featured_image.url }}">
+                                {% endif %}
+                            </div>
+                            <a href="#" class="post-link">
+                                <h3 class="card-tilte">{{ post.title}}</h3>
+                            </a>
+                            <p class="card-text"> {{ post.excerpt }}</p>
+                            <hr>
+                            <p class="card-text text-muted h6">{{ post.created_on }} 
+                                <i class="far fa-heart"></i> {{ post.number_of_likes }} </p>
+                        </div>
+                    </div>
+                </div>
+                {% if forloop.counter|divisibleby:3 %}
+                </div>
+                <div class="row">
+                {% endif %}
+                {%. endfor %}
+            </div>
+        </div>
+    </div>
+<!-- Paginated posts-->
+{% if is_paginated %}
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_pervious %}
+        <li><a href ="?page=={{ page_obj.pervious_page_number }}" class="page-link">&laquo; PREV</a></li>
+        {% endif %}
+        {% if page_obj.has_next %}
+        <li><a href ="?page=={{ page_obj.next_page_number }}" class="page-link">NEXT &raquo;</a></li>
+        {% endif %}
+    </ul>
+</nav>
+{% endif %}
+
+</div>
 {% endblock content %}
