--- a/templates/blog.html
+++ b/templates/blog.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="row">
                 {% endif %}
-                {%. endfor %}
+                {% endfor %}
             </div>
         </div>
     </div>
