--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -15,6 +15,7 @@
     {% endif %}
    </div>
 </div>
+<hr>
 <div class="recipe-container">
      <!-- Ingredient for the recipe -->
     <div class="ingredient-continer">
@@ -60,6 +61,25 @@
                     {{ total_comments }}
             </strong>
             {% endwith %}
+        </div>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-md-8 card md-4 mt-3">
+        <h3>Comments:</h3>
+        <div class="comments-body">
+            {% for comments in commts %}
+            <div class="comments" style="padding:10px;">
+                <p class="font-weight-bold">
+                    {{ comment.name }}
+                    <span class="text-muted font=weighht-normal">
+                        {{ comment.created_on }}
+                    </span> wrote:
+                </p>
+                {{ comment.body | linebreaks }}
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
