--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,17 +5,21 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
-
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
-
-{% endblock %}
+<div class="reg-container">
+  <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
+      <h2>{% trans "Sign Up" %}</h2>
+      <p>{% blocktrans %}Already have an account? Then please 
+        <a href="{{ login_url }}"><span>sign in</span></a>.{% endblocktrans %}</p>
+      </div>
+    </div>
+      <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}" style="display:grid; grid-template-columns:300px 4fr; grid-gap:10px; padding-left:5px;">
+        {% csrf_token %}
+        {{ form.as_p }}
+        {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+      </form>
+</div>
+{% endblock content%}
