--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 
 {% load i18n %}
-{% load static %}
+
+{% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="logout-container">
 <h1>{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
@@ -16,6 +16,6 @@
   {% endif %}
   <button type="submit">{% trans 'Sign Out' %}</button>
 </form>
-</div>
+
 
 {% endblock %}
