--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -52,16 +52,35 @@
     <!-- Number of likes -->
     <div class="row">
         <div class="col-1">
-            <strong class="like-comment-icon"><i class="far fa heart"></i>
-            {{ post.number_of_likes }}
+            <strong>
+                {%  if user.is_authenticated %}
+                <form class="d-inline"  action="{% url 'post_like' post.slug %}" method="POST">
+                    {% csrf_token %}
+                    {% if liked %}
+                    <button type="submit" name="blogpost-id" value="{{ post.slug }}" class="like-btn">
+                        <i class="fas fa-heart"></i>
+                    </button> 
+                    {% else %}
+                    <button type="submit" name="blogpost-id" value="{{ post.slug }}" class="like-btn">
+                        <i class="far fa-heart"></i>
+                    </button>
+                    {% endif %} 
+                </form>
+                {%  else %}
+                <span class="like-comment-icon"><i class="far fa heart"></i>
+                {% endif %}
+
             </strong>
+            <span class="like-comment-icon"><i class="far fa heart"></i>
+            {{ post.number_of_likes }}
+            </span>
         </div>
-     <!-- Number of likes -->
+     <!-- Number of comments -->
         <div class="col-1">
             {% with comments.count as total_comments %}
                 <strong class="like-comment-icon"><i class="far fa comments"></i>
                     {{ total_comments }}
-            </strong>
+                </strong>
             {% endwith %}
         </div>
     </div>
@@ -84,7 +103,7 @@
             {% endfor %}
         </div>
     </div>
-    <div class="col-md-4 card mb-4 mt-3">
+    <div class="col-md-4 card md-4 mt-3">
         <div class="card-body">
             {% if commented %}
             <div class="alert alert-success" role="alert">
@@ -93,7 +112,7 @@
             {% else %}
 
             {% if user.is_authenticated %}
-            
+
             <h3>Leave a comment:</h3>
             <p>Posting as: {{ user.username }}</p>
             <form method="post" style="margin-top:1.3em;">
