--- a/templates/base.html
+++ b/templates/base.html
@@ -59,5 +59,6 @@
     <footer>
         <h2>soical account</h2>
     </footer>
+    <script src="{% static 'js/base.js %}"></script>
 </body>
 </html>
