--- a/templates/base.html
+++ b/templates/base.html
@@ -3,39 +3,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>A'Bakes</title>
+    <!-- Meta Tags-->
+    <title>A'Kitchen</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Baking blog">
+    <meta name="keywords" content="blog, baking at home, recipes">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  
+    <!-- Favicon Link -->
+
+    <!-- Font Awesome link-->
     <script src="https://kit.fontawesome.com/897448a459.js" crossorigin="anonymous"></script>
+
+    <!-- Customer CSS Stylesheet -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <!-- Nav Bar & Logo -->
-    <header>
-        <nav>
-            <h2>Logo</h2>
-            <ul>
+    <header class="main-header">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg main-nav px-0">
+                <a class="navbar-brand" href=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="icon-bar icon-bar-1"></span>
+                    <span class="icon-bar icon-bar-2"></span>
+                    <span class="icon-bar icon-bar-3"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="mainMenu">
+                <ul class="navbar-nav ml-auto text-uppercase f1">
                 <li>
-                    <a href="{% url 'home' %}">Home</a>
+                    <a href="{% url 'home' %}" class="active active-first">Home</a>
                 </li>
                 <li>
                     <a href="{% url 'blog' %}">Blog</a>
                 </li>
+                <li>
+                    <a href="{% url 'gallary' %}">Gallary</a>
+                </li>
+                <li>
+                    <a href="{% url 'contact' %}">Contact Us</a>
+                </li>
                 {% if user.is_authenticated %}
                 <li>
-                    <a href="{% url 'account_logout' %}">Log out</a>
+                    <a href="{% url 'account_logout' %}">Log Out</a>
                 </li>
                 {% else %}
                 <li>
-                    <a href="{% url 'account_login' %}">Login</a>
+                    <a href="{% url 'account_login' %}">Log In</a>
                 </li>
                 <li>
-                    <a href="{% url 'account_signup' %}">Signup</a>
+                    <a href="{% url 'account_signup' %}">Sign Up</a>
                 </li>
                 {% endif %}
-            </ul>
-        </nav>
-    </header>
+                </ul>
+            </div>
+            </nav>
+        </div>
+    </header>      
     <div class="message-container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
@@ -48,7 +77,6 @@
                 {% endfor%}
             </div>
         </div>
-
     </div>
     <main>
     {% block content %}
@@ -59,6 +87,6 @@
     <footer>
         <h2>soical account</h2>
     </footer>
-    <script src="{% static 'js/base.js %}"></script>
+    <script src="{% static 'js/base.js' %}"></script>
 </body>
 </html>
