--- a/templates/gallary.html
+++ b/templates/gallary.html
@@ -1,4 +1,39 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="gallary-container">
+    <div class="gallary-heading">
+        <h2> My <span>Gallary</span></h2>
+    </div>
+    <hr>
+    <div class="gallary-box">
+        <div class="gallary-col">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438738/CI_PP4_A-BAKES/Gallary.page/1_eiqbig.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438739/CI_PP4_A-BAKES/Gallary.page/2_yhnujh.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438729/CI_PP4_A-BAKES/Gallary.page/3_atagxs.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438729/CI_PP4_A-BAKES/Gallary.page/4_x7yuip.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438729/CI_PP4_A-BAKES/Gallary.page/5_a8vdym.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438736/CI_PP4_A-BAKES/Gallary.page/18_tbmmic.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438736/CI_PP4_A-BAKES/Gallary.page/19_aviox6.jpg">
+        </div>
+        <div class="gallary-col">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438729/CI_PP4_A-BAKES/Gallary.page/7_yg3tb9.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438729/CI_PP4_A-BAKES/Gallary.page/8_k2ubko.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438730/CI_PP4_A-BAKES/Gallary.page/9_fk68yz.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438730/CI_PP4_A-BAKES/Gallary.page/10_drmqaa.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438730/CI_PP4_A-BAKES/Gallary.page/11_wqzpze.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438730/CI_PP4_A-BAKES/Gallary.page/12_rns8vl.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438736/CI_PP4_A-BAKES/Gallary.page/20_k34vxc.jpg">
+
+        </div>
+        <div class="gallary-col">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438730/CI_PP4_A-BAKES/Gallary.page/13_tjwcnf.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438736/CI_PP4_A-BAKES/Gallary.page/14_gkd7ec.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438736/CI_PP4_A-BAKES/Gallary.page/15_hm3gbv.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438736/CI_PP4_A-BAKES/Gallary.page/16_oa30yw.jpg">
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438736/CI_PP4_A-BAKES/Gallary.page/17_a3k3pt.jpg">     
+            <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680438729/CI_PP4_A-BAKES/Gallary.page/6_vttoxx.jpg">
+        </div>
+    </div>
+</div>
 {% endblock content %}
