--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,49 +19,313 @@ body{
 }
 span{
   font-family: 'Dancing Script', sans-serif;
-
+}
+main{
+  padding-top: 120px;
 }
 
 /*-------- NavbAR & Logo----------*/
-.logo{
 
+.home-link {
   font-size: 40px;
-  font-family: 'Dancing Script', sans-serif;
-  font-weight: bold;
-  line-height: 80px;
-  padding:0 100px;
+  font-family: 'Dancing Script'
 }
-.logo a{
-  color:rgb(181, 49, 159);
-  text-decoration: none;
+.container {
+  max-width: 1000px;
+  padding-left: 1.4rem;
+  padding-right: 1.4rem;
+  margin-left: auto;
+  margin-right: auto;
 }
-.nav{
-  height:100px;
+#navbar {
+  --navbar-height: 64px;
+  position: fixed;
+  height: var(--navbar-height);
+  background-color: var(--navbar-bg-color);
+  left: 0;
+  right: 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+}
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+  align-items: center;
+}
+.navbar-item {
+  margin: 0.4em;
   width: 100%;
 }
-.nav ul {
-  float: right;
-  margin-right: 20px;
-}
-.nav ul li{
-  display: inline-block;
-  margin: 0 6px;
-  line-height: 80px;
-}
-.nav ul li a{
-  font-family: 'Dancing Script', sans-serif;
-  color:#9368b7ff;
-  font-size: 23px;
+
+.home-link,
+.navbar-link {
+  color: var(--navbar-text-color);
   text-decoration: none;
-  padding:7px 13px;
-  border-radius: 3px;
-
-}
-nav ul a.active, a:hover{
-  background-color:rgb(161, 223, 231);
-  transition: 0.4s;
-  border-radius: 3PX;
-
+  display: flex;
+  font-weight: 400;
+  align-items: center;
 }
 
+.home-link:is(:focus, :hover) {
+  color: var(--navbar-text-color-focus);
+}
+
+.navbar-link {
+  justify-content: center;
+  width: 100%;
+  padding: 0.4em 0.8em;
+  border-radius: 5px;
+}
+
+.navbar-link:is(:focus, :hover) {
+  color: var(--navbar-text-color-focus);
+  background-color: var(--navbar-bg-contrast);
+}
+.navbar-logo {
+  background-color: var(--navbar-text-color-focus);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  margin-right: 0.5em;
+}
+#navbar-toggle {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.icon-bar {
+  display: block;
+  width: 25px;
+  height: 4px;
+  margin: 2px;
+  background-color: var(--navbar-text-color);
+}
+#navbar-toggle:is(:focus, :hover) .icon-bar {
+  background-color: var(--navbar-text-color-focus);
+}
+#navbar-toggle[aria-expanded="true"] .icon-bar:is(:first-child, :last-child) {
+  position: absolute;
+  margin: 0;
+  width: 30px;
+}
+#navbar-toggle[aria-expanded="true"] .icon-bar:first-child {
+  transform: rotate(45deg);
+}
+#navbar-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+  opacity: 0;
+}
+#navbar-toggle[aria-expanded="true"] .icon-bar:last-child {
+  transform: rotate(-45deg);
+}
+#navbar-menu {
+  position: fixed;
+  top: var(--navbar-height);
+  bottom: 0;
+  opacity: 0;
+  visibility: hidden;
+  left: 0;
+  right: 0;
+}
+#navbar-toggle[aria-expanded="true"] + #navbar-menu {
+  background-color: rgba(0, 0, 0, 0.4);
+  opacity: 1;
+  visibility: visible;
+}
+.navbar-links {
+  list-style: none;
+  position: absolute;
+  background-color: var(--navbar-bg-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  left: 0;
+  right: 0;
+  margin: 1.4rem;
+  border-radius: 5px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+
+#navbar-toggle[aria-expanded="true"] + #navbar-menu .navbar-links {
+  padding: 1em;
+}
+@media screen and (min-width: 700px) {
+  #navbar-toggle,
+  #navbar-toggle[aria-expanded="true"] {
+    display: none;
+  }
+
+  #navbar-menu,
+  #navbar-toggle[aria-expanded="true"] #navbar-menu {
+    visibility: visible;
+    opacity: 1;
+    position: static;
+    display: block;
+    height: 100%;
+  }
+
+  .navbar-links,
+  #navbar-toggle[aria-expanded="true"] #navbar-menu .navbar-links {
+    margin: 0;
+    padding: 0;
+    box-shadow: none;
+    position: static;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/* ------------------ Home Page -------------------- */
+.hero-img{
+  height: 700px;
+  width: 100%;
+  background-image: url('https://res.cloudinary.com/doow4kmj4/image/upload/v1680280865/images/hero-image_n2n2za.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.hero-img h1{
+  color: #aa3e98ff;
+  font-family: sans-serif;
+  padding-top: 70px;
+  padding-left: 40px;
+}
+.hero-img  span{
+  font-size: 170%;
+}
+.hero-img hr{
+  width:40%;
+  color:#1abc9c;
+  padding-left: 40px;
+  height: 5px;
+}
+.hero-text {
+  font-size: 160%;
+  font-family: 'Indie Flower', sans-serif;
+  letter-spacing: 2px;
+  width: 500px;
+  height: 400px;
+  padding-top:40px;
+  padding-left: 50px;
+}
 /*-------- General CSS ----------*/
+/* ------------------ Login Page -------------------- */
+.login-container{
+  display: block;
+  margin-top: auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+.login-image{
+  background-image: url('https://res.cloudinary.com/doow4kmj4/image/upload/v1680495436/CI_PP4_A-BAKES/15_xh7hxa.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 100vw;
+  height: 100vh;
+}
+/* ------------------ Gallary Page -------------------- */
+.gallary-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin:40px 20px 0 20px
+}
+.gallary-container .gallary-heading{
+  width: 50%;
+  padding-bottom: 40px;
+}
+.gallary-heading h2 {
+  font-size: 50px;
+  font-weight: bold;
+  border-bottom: 3px solid #9297c4ff;
+}
+.gallary-box{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.gallary-box .gallary-col {
+  display: flex;
+  flex-direction: column;
+  width:32.5%;
+}
+.gallary-box .gallary-col img{
+  width: 100%;
+  padding-bottom: 15px;
+  border-radius: 10px;
+}
+@media (max-width: 769px){
+  .gallary-container .gallary-box {
+    flex-direction: column;
+  }
+  .gallary-container .gallary-box .gallary-col{
+    width: 100%;
+  }
+}
+@media (max-width: 643px){
+  .gallary-container .gallary-box {
+    width: 100%;
+  }
+  .gallary-heading{
+    font-size: 25px;
+  }
+}
+
+/* ------------------ Footer -------------------- */
+footer{
+  height: 180px;
+  clear: both;
+  background-color: white;
+  padding-top: 10px;
+}
+footer h3{
+  text-align: center;
+  color:#aa3e98ff;
+}
+.social{
+text-align: center;
+padding-bottom: 25px;
+}
+.social ul li{
+  display: inline-block;
+  list-style: none;
+  padding: 10px;
+}
+.soical a{
+  color: darkcyan;
+  font-size: 25px;
+  margin: 0 25px;
+  align-items: center;
+}
+.short-link ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
+.short-link a{
+  color: darkcyan;
+  text-decoration: none;
+}
+.short-link ul li {
+  display: inline-block;
+}
+footer p{
+  margin-top: 15px;
+  text-align: center;
+  font-size: 20px;
+  color: rgb(7, 89, 89);
+}
