--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,46 +1,43 @@
 {% extends "base.html" %}
-
 {% load i18n %}
 {% load account socialaccount %}
-
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
-
 {% block content %}
-
-<h1>{% trans "Sign In" %}</h1>
-
-{% get_providers as socialaccount_providers %}
-
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-<div class="socialaccount_ballot">
-
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
-
-  <div class="login-or">{% trans 'or' %}</div>
-
+<div class="login py-5 db-light">
+  <div class="login-container">
+    <div class="row g-0">
+      <div class="col-lg-6">
+          <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680495436/CI_PP4_A-BAKES/15_xh7hxa.jpg" alt="Heart shape cookies" class="login-img">
+      </div>
+      <div class="col-lg-7 tect-center py-6">
+        <h1><span>{% trans "Sign In" %}</span></h1>   
+        <p>{% blocktrans %}If you have not created an account yet, then please
+          <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}
+      </div>
+      <!-- Sign Form -->
+      <form class="login" method="POST" action="{% url 'account_login' %}">
+      {% csrf_token %}
+      {{ form.as_p }}
+      {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+      {% endif %}
+      <div>
+        <button type="submit">Log In</button>
+      </div>
+        <div>
+          <p class="mb-0 me-1">Don't have an account?</p>
+          <a href="{{ signup_url }}"><span>Sign Up</span></a>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
+   
+   
+      
 
-{% include "socialaccount/snippets/login_extra.html" %}
 
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-</form>
+
 
 {% endblock %}
