--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Baking blog">
     <meta name="keywords" content="blog, baking at home, recipes">
-
+   
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -85,6 +85,10 @@
     </div>
     <p>Copyright@ 2023 By Asma</p>
 </footer>
+    <!-- Customer JS -->
     <script src="{% static 'js/base.js' %}"></script>
+     <!-- EmailJS-->
+     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
 </body>
 </html>
