--- a/static/css/style.css
+++ b/static/css/style.css
@@ -182,6 +182,14 @@ main{
 }
 
 /* ------------------ Home Page -------------------- */
+.hero{
+  background-image: url('https://res.cloudinary.com/doow4kmj4/image/upload/v1680500514/CI_PP4_A-BAKES/home-bg_cqfmv2.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 100vw;
+  height: 100vh;
+}
 
 /*-------- General CSS ----------*/
 /* ------------------ Login Page -------------------- */
