--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,7 @@ main{
   padding-top: 100px;
 }
 
+
 /*-------- NavBar & Logo----------*/
 
 .home-link {
@@ -191,17 +192,85 @@ main{
   height: 100vh;
 }
 /* ------------------ Register Page -------------------- */
-.reg-container{
-  display: block;
-  margin-top: auto;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  background-color: rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+.signup-container {
+  position: relative;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  padding: 20px 100px;
 }
-form button{
-  margin: auto;
+.signup-container:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("https://res.cloudinary.com/doow4kmj4/image/upload/v1680508466/CI_PP4_A-BAKES/login-pg-bg_g1tdso.jpg");
+  background-size: cover;
+  z-index: -1;
+  filter: blur(3px);
+}
+.signup-box{
+  max-width: 850px;
+  height: 1000px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+
+}
+.signup-img{
+  height: 600px;
+  width: 600px;
+  border-radius: 10px;
+  background-image: url("https://res.cloudinary.com/doow4kmj4/image/upload/v1680438730/CI_PP4_A-BAKES/Gallary.page/11_wqzpze.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.signup-form-box{
+  padding:25px 40px;
+}
+.signup-form-box a{
+  text-decoration: none;
+}
+.signup{
+  width:500px;
+}
+.signup_span{
+  font-size: 35px;
+  color:#aa3e98ff; ;
+}
+.signup-form-box h2{
+  font-size: 50px;
+  font-weight: bolder;
+  color: #aa3e98ff;
+  position: relative;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#signup-form input{
+  width: 100%;
+  padding: 8px 16px;
+  margin-bottom: 22px;
+}
+#signup_form input:hover{
+  background-color: rgba(0, 0, 0, 0.1);
+}
+#signup_form button{
+  width: 100%;
+  font-size: 20px;
+  padding: 8px 16px;
+  margin-bottom: 22px;
+  outline: none;
+  border: none;
+}
+#signup_form button:hover{
+  background-color:rgb(235, 116, 215)
 }
 /* ------------------ Login Page -------------------- */
 .login-container{
@@ -363,9 +432,9 @@ form button{
 }
 /* ------------------ Footer -------------------- */
 footer{
+  background: transparent !important;
   height: 180px;
   clear: both;
-  background-color: white;
   padding-top: 10px;
 }
 footer h3{
@@ -374,7 +443,6 @@ footer h3{
 }
 .social{
 text-align: center;
-padding-bottom: 25px;
 }
 .social ul li{
   display: inline-block;
