--- a/templates/base.html
+++ b/templates/base.html
@@ -27,9 +27,11 @@
     <!-- Nav Bar & Logo -->
     <header id="navbar">
     <nav class="navbar-container container">
-      <a href="{% url 'home' %}" class="home-link">
-        A'Bakes
-      </a>
+        <div class="home-link">
+            <a href="{% url 'home' %}">
+            A'Bakes
+            </a> 
+        </div>
       <!-- Navigation -->
       <button type="button" id="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu" aria-expanded="false">
         <span class="icon-bar"></span>
