--- a/templates/base.html
+++ b/templates/base.html
@@ -89,5 +89,6 @@
 </footer>
     <!-- Customer JS -->
     <script src="{% static 'js/base.js' %}"></script>
+    <script src="{% static 'js/contact.js'%}"></script>
 </body>
 </html>
