--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,21 @@
 {% block content %}
 <section class="hero">
     <div>
-        <h2>Welcome to my</h2>
-    </div>
-    <div>
-        <h1>Kitchen</h1>
-    </div>
-    <div>
-        <p>info about me </p>
+        <div class="hero-text-1">
+            <h2>Welcome to my</h2>
+        </div>
+        <div class="hero-text-2">
+            <h1>Kitchen..!</h1>
+        </div>
+        <div class="hero-text">
+            <p>Asma here, a self-taught baker who adores baking, and my 
+                kid is my hardest critic to win over. You can find recipes 
+                here that you can cook with your children. making memories 
+                filled with laughter and excitement while developing the skills 
+                and information necessary to bake. Therefore the next time your 
+                having a party or your child is taking part in a baking content 
+                you may wow everyone..<i class="fas fa-smile-wink"></i></p>
+        </div>
     </div>
 </section>
 {% endblock content %}
