--- a/static/css/style.css
+++ b/static/css/style.css
@@ -250,7 +250,7 @@ main{
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  max-height: 100vh;
   padding: 20px 100px;
 }
 .signup-container:after {
@@ -371,9 +371,15 @@ main{
   padding-bottom: 40px;
 }
 .gallary-heading h2 {
+  font-family:'Indie Flower', sans-serif;
   font-size: 50px;
   font-weight: bold;
+  padding-bottom: 7px;
   border-bottom: 3px solid #9297c4ff;
+}
+.gallary-heading span{
+  color:#aa3e98ff;
+  font-size: 65px;
 }
 .gallary-box{
   display: flex;
