--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,41 +3,21 @@
 {% load account socialaccount %}
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 {% block content %}
-<div class="login py-5 db-light">
-  <div class="login-container">
-    <div class="row g-0">
-      <div class="col-lg-6">
-          <img src="https://res.cloudinary.com/doow4kmj4/image/upload/v1680495436/CI_PP4_A-BAKES/15_xh7hxa.jpg" alt="Heart shape cookies" class="login-img">
-      </div>
-      <div class="col-lg-7 tect-center py-6">
-        <h1><span>{% trans "Sign In" %}</span></h1>   
-        <p>{% blocktrans %}If you have not created an account yet, then please
-          <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}
-      </div>
+<div class="login-container">
+  <div class="login-box">
+    <div class="login-img"></div>
+      <div class="login-form-box">
+        <h1><span>{% trans "Sign In" %}</span></h1>  
+        <hr>
+        <p class="login-text">{% blocktrans %}If you have not created an account yet, then please
+          <a href="{{ signup_url }}"><span>Sign up</span></a> first.{% endblocktrans %}
       <!-- Sign Form -->
-      <form class="login" method="POST" action="{% url 'account_login' %}">
+      <form class="login_form" method="POST" action="{% url 'account_login' %}">
       {% csrf_token %}
       {{ form.as_p }}
-      {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-      {% endif %}
-      <div>
-        <button type="submit">Log In</button>
-      </div>
-        <div>
-          <p class="mb-0 me-1">Don't have an account?</p>
-          <a href="{{ signup_url }}"><span>Sign Up</span></a>
-        </div>
+        <button type="submit" name="submit button" herf="{% url 'account_login' %}" value="Send">Log In</button>
       </form>
     </div>
   </div>
 </div>
-   
-   
-      
-
-
-
-
-
 {% endblock %}
