trying to deploy

--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,30 @@
     <p>Copyright@ 2023 By Asma</p>
 </footer>
     <!-- Customer JS -->
-    <script src="{% static 'js/base.js' %}"></script>
-    <script src="{% static 'js/contact.js'%}"></script>
+    <script>
+        setTimeout(function (){
+            let messages = document.getElementById("msg");
+            let alert = new bootstrap.Alert(messages);
+            alert.close(); 
+            }, 5000
+            );
+
+            
+        //Jave script for nav bar//
+        const navbarToggle = navbar.querySelector("#navbar-toggle");
+        const navbarMenu = document.querySelector("#navbar-menu");
+        const navbarLinksContainer = navbarMenu.querySelector(".navbar-links");
+        let isNavbarExpanded = navbarToggle.getAttribute("aria-expanded") === "true";
+            
+        const toggleNavbarVisibility = () => {
+            isNavbarExpanded = !isNavbarExpanded;
+            navbarToggle.setAttribute("aria-expanded", isNavbarExpanded);
+        };
+            
+        navbarToggle.addEventListener("click", toggleNavbarVisibility);
+            
+        navbarLinksContainer.addEventListener("click", (e) => e.stopPropagation());
+        navbarMenu.addEventListener("click", toggleNavbarVisibility);
+    </script>
 </body>
 </html>
