--- a/static/css/style.css
+++ b/static/css/style.css
@@ -243,7 +243,16 @@ main{
   border-radius: 10px;
   padding: 25px;
 }
-
+/* ------------------ Blog Page ------------------------ */
+.card-img {
+  padding: 5px;
+  width: 30%;
+  height: 30%;
+}
+.card-body a {
+  text-decoration: none;
+  color: #1abc9c;
+}
 /* ------------------   Recipe Page -------------------- */
 .recipe-title{
     text-align: center;
